--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ partial "global/head" . }}
 {{ partial "global/navbar" . }}
-{{ range .Params.home_sections }}
+{{ range .Params.page_builder }}
 
 {{ if eq "text-and-image" .type }}
 {{ partial "page-builder/call-to-action" (dict "sectionData" .) }}
